Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.12.9, 5.15.0
-
Fix Version/s: 5.15.3
-
Component/s: Quick: Other
-
Labels:
-
Environment:Windows 10
-
Platform/s:
-
Commits:bb2c3bfa4f4d001ec39d54d038943f9533f4c952 (qt/tqtc-qtdeclarative/tqtc/lts-5.15)
-
Sprint:UI Bug Fixing Q1/2021
Description
When destroying an item in a model that has an animation running as part of its delegate then it can cause a crash to occur. This is because the animation appears to still be running and the connecting objects to it are no longer valid but are still referened by the animation. In the attached example, press any key repeatedly and within about 20 seconds or so then it will crash.
Attachments
Issue Links
- relates to
-
QTBUG-86708 When using DelegateModelGroup to group items then when a created item which is set to not be included will trigger an assert
-
- Closed
-